--- a/template/css/ome.css
+++ b/template/css/ome.css
@@ -1,3 +1,6 @@
+
+/* CSS used by OME presentations */
+
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
     text-transform: none;
 }
