--- a/template/css/ome.css
+++ b/template/css/ome.css
@@ -73,3 +73,14 @@ table.centre {
 .funding_logo {
     width:250px;
 }
+
+.guides {
+    width:300px;
+    position: relative;
+    right: 100;
+    left: 100;
+    top: 100;
+    bottom: 100;
+    display: inline-block;
+    overflow: visible;
+}
